<resources>
    <string name="app_name">Shop_project</string>
    <string name="application_name">StarSet</string>

    <string name="text_btn_enter">Войти</string>
    <string name="text_btn_reg">Зарегистрироваться</string>

    <string name="regist">Зарегистрироваться</string>
    <string name="enter">Есть аккаунт? Войти</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="registration_name">Регистрация</string>

    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_password_2">Подтверждение</string>

    <string name="hint_surname">Фамилия</string>
    <string name="hint_name">Имя</string>

    <string name="categories">Категории</string>
    <string name="products">Товары</string>
    <string name="text_buy">Купить</string>

    <string name="text_searchview">Поиск...</string>
    <string name="profile_text">Профиль</string>
    <string name="lb_for_name">Name</string>
    <string name="lb_for_email">Email</string>
    <string name="orders">Заказы</string>
    <string name="purchased">Купленные товары</string>
    <string name="cooperation">Сотрудничество</string>
    <string name="feedback">Оставить отзыв</string>
    <string name="feedback_questions">Ответы на вопросы</string>
    <string name="support">Поддержка</string>
    <string name="log_out">Выйти из аккаунта</string>
    
    <string name="log_out_title">"Выход из аккаунта"</string>
    <string name="log_out_message">Вы точно хотите выйти из аккаунта?</string>

    <string name="order_text">Заказы</string>
    <string name="support_text">Поддержка</string>
    <string name="hint_message">Сообщение поддержке...</string>

    <string name="text_info">По вопросам\nсотрудничества:</string>
    <string name="telegram">#Telegram</string>
    <string name="email">#Почта - rakhmaevdanil@gmail.com</string>
    <string name="vk">#Вконтакте</string>
    <string name="purchased_goods_text">Купленные\nтовары</string>
    <string name="leave_review_text">Оставить отзыв</string>
    <string name="hint_leave_review">Оставить отзыв...</string>
    <string name="question_answer">Вопрос\nОтвет</string>
    <string name="settings">Настройки</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="lastname">Отчество</string>
    <string name="paymentMethod">Способ оплаты</string>
    <string name="save">Сохранить</string>
    <string name="rec_password">Восстановление\nпароля</string>
    <string name="remembered">Вспомнил пароль!</string>
    <string name="recover">Восстановить</string>


</resources>