<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".Registration_Activity">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="891dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333"
        tools:ignore="TextSizeCheck,VisualLintBounds">

        <TextView
            android:id="@+id/text_registration"
            style="@style/style_application_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration_name"
            android:translationY="80dp" />

        <EditText
            android:id="@+id/tb_surname"
            style="@style/tb_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hint_surname"
            android:inputType="text"
            android:translationY="140dp" />

        <EditText
            android:id="@+id/tb_name"
            style="@style/tb_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hint_name"
            android:inputType="text"
            android:translationY="170dp" />

        <EditText
            android:id="@+id/tb_email"
            style="@style/tb_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:translationY="200dp" />

        <EditText
            android:id="@+id/tb_password"
            style="@style/tb_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:translationY="230dp" />

        <EditText
            android:id="@+id/tb_password_2"
            style="@style/tb_style"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints=""
            android:hint="@string/hint_password_2"
            android:inputType="textPassword"
            android:translationY="260dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter"
            style="@style/btn_style"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:text="@string/text_btn_reg"
            android:translationY="360dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/link_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/jura_light"
            android:minHeight="48dp"
            android:text="@string/enter"
            android:textColor="#030112"
            android:textSize="18sp"
            android:textStyle="bold"
            android:translationY="370dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>