<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="632dp"
        android:background="@drawable/bkg_for_sheet"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:translationX="20dp"
            android:translationY="28dp"
            app:srcCompat="@drawable/icon_back" />

        <TextView
            android:id="@+id/text_name_shop"
            style="@style/style_sheet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="15dp"
            android:translationX="65dp"
            android:text="@string/cooperation" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="531dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:translationY="30dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/text_info"
                style="@style/style_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_info"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:autoLink=""
                android:id="@+id/link_telegram"
                style="@style/style_link"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telegram"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/email"
                style="@style/style_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/link_vk"
                style="@style/style_link"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vk"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>