<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="687dp"
        android:background="@drawable/bkg_for_sheet"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/tb_email"
            style="@style/tb_style"
            android:layout_width="287dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:translationY="-20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_recover"
            style="@style/btn_style"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/recover"
            android:layout_gravity="center"
            android:translationY="180dp" />

        <TextView
            android:id="@+id/link_remembered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jura_light"
            android:minHeight="48dp"
            android:text="@string/remembered"
            android:textColor="#030112"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:translationY="240dp" />

        <TextView
            android:id="@+id/text_name_shop"
            style="@style/style_sheet_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="-230dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/rec_password" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>